feat: implement document processing with RAG pipeline
- Add DocumentChunker for semantic text splitting
- Integrate Ollama embeddings via WebClient
- Store chunks with vectors in PostgreSQL/pgvector
- Hybrid reactive (Ollama) + blocking (JPA) approach
- Track metadata (section, line) for citations

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ frontend/.DS_Store
 # =============================
 backend/target/
 backend/out/
+backend/test
 backend/*.class
 backend/*.war
 backend/*.ear
