feat(backend): implement dual-mode document chunking and reactive API
- Added MarkdownChunker to handle clean LlamaParse resume output
- Enhanced DocumentChunker with fuzzy logic for messy LinkedIn JDs
- Refactored DocumentController to a non-blocking Mono flow
- Implemented Header-as-Chunk logic to ensure headers are vectorized

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=devpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+llama.cloud.api.key=${LLAMA_KEY:missing}
